[tool.poetry]
name = "ozbargain"
version = "0.1.0"
description = ""
authors = ["Nam Tonthat <n.nam.tonthat@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
bokeh = "^3.0.2"
requests = "^2.28.1"
bs4 = "^0.0.1"
selenium = "^4.6.1"
pandas = "^1.5.2"
markdown2 = "^2.4.6"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.17.1"
jupyter = "^1.0.0"
notebook = "^6.5.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
